# clients

./: .gitignore  .mcp.json  eslint.config.mjs  jest.config.js  lint-staged.config.mjs  nx.json  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.eslint.json
.checkmarx/: config.yml
.claude/: CLAUDE.md
.claude/rules/: angular-components.md  angular.md  autofill-content-scripts.md  flatpak-manifest.md  i18n.md  snap-permissions.md  tailwind.md  testing.md  typescript.md
.claude/skills/figma-to-angular/: SKILL.md
.claude/skills/writing-client-code/: SKILL.md
.devcontainer/browser-gui/: devcontainer.json
.devcontainer/common/: .env.example  docker-compose.yml  post-create-command.sh
.devcontainer/macos-xquartz/: devcontainer.json  docker-compose.override.yml
.devcontainer/native-gui/: devcontainer.json  setup-x11.sh
.github/: CODEOWNERS  codecov.yml  platform-community-paths.yml  renovate.json5  whitelist-capital-letters.txt
.github/workflows/: alert-ddg-files-modified.yml  build-browser.yml  build-cli.yml  build-desktop.yml  build-web-target.yml  build-web.yml  cherry-pick.yml  chromatic.yml  crowdin-pull.yml  deploy-web.yml  lint-crowdin-config.yml  lint.yml  locales-lint.yml  nx.yml  publish-cli.yml  publish-desktop.yml  publish-web.yml  release-cli.yml  release-web.yml  repository-management.yml  retrieve-current-desktop-rollout.yml  sdk-breaking-change-check.yml  sdk-update.yml  test-browser-interactions.yml  test.yml  version-auto-bump-desktop-signal.yml  version-auto-bump-desktop.yml  version-auto-bump.yml
.storybook/: main.ts  manager.js  preview.tsx  test-runner.ts
apps/browser/: package.json  tailwind.config.js  test.setup.ts  tsconfig.build.json  webpack.base.js  webpack.config.js
apps/browser/config/: beta.json  config.js  development.json
apps/browser/scripts/: package-safari.ps1
apps/browser/src/: manifest.json  manifest.v3.json
apps/cli/: package.json  webpack.base.js
apps/cli/config/: development.json
apps/cli/src/: base-program.ts  oss-serve-configurator.ts  program.ts  utils.ts  vault.program.ts
apps/desktop/: custom-appx-manifest.xml  electron-builder.beta.json  electron-builder.json  package.json  sign.js  tailwind.config.js  webpack.base.js
apps/desktop/config/: config.js  development.json
apps/desktop/desktop_native/: Cargo.toml  build.js  cargo-tool-versions  deny.toml
apps/desktop/desktop_native/autofill_provider/: Cargo.toml  README.md  build.sh  uniffi-bindgen.rs
apps/desktop/desktop_native/autofill_provider/src/: assertion.rs  lib.rs  lock_status.rs  registration.rs  window_handle_query.rs
apps/desktop/desktop_native/autotype/: Cargo.toml
apps/desktop/desktop_native/autotype/schemas/: autotype-pairing-data-schema.0.1.0.json
apps/desktop/desktop_native/autotype/src/: lib.rs
apps/desktop/desktop_native/autotype/src/app_data/: mod.rs
apps/desktop/desktop_native/autotype/src/app_data/path/: mod.rs  normalizer.rs  platform_policy.rs
apps/desktop/desktop_native/autotype/src/windows/: mod.rs  type_input.rs
apps/desktop/desktop_native/biometric/: Cargo.toml
apps/desktop/desktop_native/biometric/src/: encryption.rs  lib.rs  windows.rs
apps/desktop/desktop_native/macos_provider/: Cargo.toml
apps/desktop/desktop_native/macos_provider/src/: lib.rs
apps/desktop/desktop_native/secure_memory/: Cargo.toml  README.md
apps/desktop/desktop_native/secure_memory/examples/: store_and_retrieve.rs
apps/desktop/desktop_native/secure_memory/src/: dpapi.rs  encrypted_memory_store.rs  lib.rs
apps/desktop/desktop_native/secure_memory/src/secure_key/: keyctl.rs  mod.rs
apps/desktop/desktop_native/windows_plugin_authenticator/: Cargo.toml
apps/desktop/desktop_native/windows_plugin_authenticator/src/: assert.rs  authenticator.rs  ipc.rs  lib.rs  main.rs  make_credential.rs  util.rs
apps/desktop/fastlane/: fastfile
apps/desktop/native-messaging-test-runner/: package-lock.json  package.json  tsconfig.json
apps/desktop/resources/: com.bitwarden.desktop.desktop  com.bitwarden.desktop.devel.yaml  linux-wrapper.sh  windows_plugin_authenticator_config.beta.json  windows_plugin_authenticator_config.json
apps/desktop/scripts/: after-pack.js  after-sign.js  appx-cross-build.ps1  start.js
apps/desktop/src/: main.ts  package-lock.json  package.json  utils.spec.ts  utils.ts
apps/web/: Dockerfile  README.md  claude-plan.md  package.json  tailwind.config.js  webpack.base.js
apps/web/config/: development.json  euqa.json  qa.json  usqa2.json
apps/web/src/: 404.html  index.html
bitwarden_license/bit-browser/: tsconfig.json
bitwarden_license/bit-web/src/: main.ts
docs/: cipher-types.md  using-nx-to-build-projects.md
libs/admin-console/: test.setup.ts
libs/angular/src/: jslib.module.ts
libs/auth/: CLAUDE.md
libs/auto-confirm/src/: index.ts
libs/common/spec/: fake-state-provider.ts  fake-state.ts  matrix.ts
libs/components/: jest.config.js  tailwind.config.base.js
libs/components/src/: index.ts  main.ts  test.setup.ts  theme.css  tw-theme.css
libs/eslint/components/: index.mjs  no-bit-dialog-wrapper.mjs  no-bit-dialog-wrapper.spec.mjs  no-bwi-class-usage.mjs  no-bwi-class-usage.spec.mjs
libs/eslint/platform/: index.mjs  no-self-package-import.mjs  no-self-package-import.spec.mjs  no-unawaited-using-return.mjs  no-unawaited-using-return.spec.mjs
libs/importer/: jest.config.js
libs/key-management-ui/src/: index.ts  key-management-ui.module.ts
libs/key-management/src/: key.service.spec.ts  (+1 more)
libs/logging-angular/: README.md  jest.config.js  project.json
libs/messaging/: README.md
libs/organization-invite-link/: README.md  jest.config.js  project.json
libs/pam/: README.md  jest.config.js  package.json  project.json
libs/shared/: jest.config.angular.js  jest.config.ts.js
libs/storybook/: README.md  jest.config.js  package.json  project.json  tsconfig.eslint.json  tsconfig.lib.json  tsconfig.spec.json
libs/subscription/: jest.config.js
scripts/: get-repo-changelog.sh  prepare-env-unix-rust.sh  prepare-env-windows-rust.ps1  run-cargo-tool.mjs
(+3345 files in other folders)
