[package]
name = "macos_provider"
license = "GPL-3.0"
version = "0.0.0"
publish = false

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[dependencies]
desktop_core = { path = "../core" }
log = "0.4.22"
oslog = "0.2.0"
uniffi = { version = "0.28.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
