[package]
name = "macos_provider"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib"]
bench = false

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[target.'cfg(target_os = "macos")'.dependencies]
desktop_core = { path = "../core" }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-oslog = "=0.3.0"
tracing-subscriber = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lints]
workspace = true
