[package]
name = "windows_plugin_authenticator"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

[target.'cfg(windows)'.dependencies]
# autofill_provider = { path = "../autofill_provider" }
base64 = { workspace = true }
# desktop_core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
win_webauthn = { path = "../win_webauthn" }
windows = { workspace = true, features = [
    "ApplicationModel_PackageExtensions",
    "System",
    "Storage_Search",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
] }
windows-core = { workspace = true }

[lints]
workspace = true
